--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -13,17 +13,24 @@ jobs:
     - uses: actions/checkout@v3
     - name: configure
       run: ./configure
+      working-directory: src/Beta
     - name: make
       run: make
+      working-directory: src/Beta
+
     - name: make check
       run: make check
+      working-directory: src/Beta
+
     - name: make distcheck
       run: make distcheck
+      working-directory: src/Beta
+
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v3.1.2
       with:
         # Artifact name
         name: artifact
         # A file, directory or wildcard pattern that describes what to upload
-        path: src/Stable/MCT-Linux
+        path: src/Beta/MCT-Linux
         # The desired behavior if no files are found using the provided path.
