--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -21,5 +21,5 @@ jobs:
         # Artifact name
         name: artifact
         # A file, directory or wildcard pattern that describes what to upload
-        path: src/Beta/MCT-Linux
+        path: src/Beta/MCT-Linux-Beta
         # The desired behavior if no files are found using the provided path.
